# Drone_simulator

./: README.md  create_aruco.py  run_container.sh
catkin_ws/devel/include/cvg_sim_msgs/: Altimeter.h  Altitude.h  AttitudeCommand.h  Compass.h  ControllerState.h  HeadingCommand.h  HeightCommand.h  MotorCommand.h  MotorPWM.h  MotorStatus.h  PositionXYCommand.h  RC.h  RawImu.h  RawMagnetic.h  RawRC.h  RuddersCommand.h  ServoCommand.h  Supply.h  ThrustCommand.h  VelocityXYCommand.h  VelocityZCommand.h  YawrateCommand.h
catkin_ws/devel/include/tum_ardrone/: SetInitialReachDistanceRequest.h  SetInitialReachDistanceResponse.h  SetMaxControlRequest.h  SetMaxControlResponse.h  SetReferenceRequest.h  SetReferenceResponse.h  SetStayTimeRequest.h  SetStayTimeResponse.h  SetStayWithinDistanceRequest.h  SetStayWithinDistanceResponse.h  StateestimationParamsConfig.h  filter_state.h
catkin_ws/devel/lib/ardrone_joystick/: ardrone_teleop
catkin_ws/devel/lib/message_to_tf/: message_to_tf
catkin_ws/devel/lib/pkgconfig/: ardrone_joystick.pc  ardrone_tutorials.pc  cvg_sim_gazebo.pc  cvg_sim_gazebo_plugins.pc  cvg_sim_msgs.pc  message_to_tf.pc  tum_ardrone.pc
catkin_ws/devel/lib/tum_ardrone/: drone_autopilot  drone_gui
catkin_ws/src/ardrone_joystick/: CMakeLists.txt  LICENSE  README.md
catkin_ws/src/ardrone_joystick/src/: main.cpp
catkin_ws/src/drone_control/: CMakeLists.txt  package.xml
catkin_ws/src/drone_control/launch/: drone.launch  launch.launch
catkin_ws/src/nswr_gps/: CMakeLists.txt  package.xml
catkin_ws/tag_1/: model.config  model.sdf
(+38 files in other folders)
